# oxyous-2026

./: .gitignore  LICENSE.md  README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/uk/oxyous/oxyous_2026/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DataStructures.hpp  includes.hpp  main.cpp
app/src/main/cpp/engine/: Engine.cpp  Engine.hpp  GPUResources.cpp  GPUResources.hpp  GameView.cpp  GameView.hpp  IOHelper.hpp  Input.cpp  Input.hpp
app/src/main/cpp/engine/actors/: ActorFactory.cpp  ActorFactory.hpp  OGActor.cpp  OGActor.hpp  OGCamera.cpp  OGCamera.hpp  OGCharacter.cpp  OGCharacter.hpp  OGPlayerActor.cpp  OGPlayerActor.hpp
app/src/main/cpp/engine/ai/: AIPathFinding.cpp  AIPathFinding.hpp  NavMesh.hpp
app/src/main/cpp/engine/algorithms/: AStar.cpp  AStar.hpp  OGBVH.cpp  OGBVH.hpp  OGOctree.cpp  OGOctree.hpp
app/src/main/cpp/engine/collision/: AABBVolume.cpp  BHV.cpp  BHV.hpp  BVH.cpp  BVH.hpp  CapsuleVolume.cpp  Collision.hpp  CollisionFactory.hpp  CollisionHelper.hpp  Frustum.cpp  OBBVolume.cpp  PlaneVolume.cpp  SphereVolume.cpp
app/src/main/cpp/engine/components/: OGCollisionComponent.cpp  OGCollisionComponent.hpp  OGPhysicsComponent.cpp  OGPhysicsComponent.hpp  OGStaticMeshComponent.cpp  OGStaticMeshComponent.hpp
app/src/main/cpp/engine/elements/: OGButton.cpp  OGButton.hpp  OGElement.cpp  OGElement.hpp  ScreenSpaceRenderer.cpp  ScreenSpaceRenderer.hpp
app/src/main/cpp/engine/entity/: OGEntity.cpp  OGEntity.hpp  OGObject.hpp
app/src/main/cpp/engine/input/: Input.cpp  Input.hpp  ThumbStick.cpp  ThumbStick.hpp
app/src/main/cpp/engine/math/: MathHelper.hpp
app/src/main/cpp/engine/physics/: GPhysicsManager.cpp  GPhysicsManager.hpp  OGCollisionManifold.cpp  OGCollisionManifold.hpp  OGPhysicsManager.cpp  OGPhysicsManager.hpp
app/src/main/cpp/engine/ui/: OGSprite.cpp  OGSprite.hpp  OGSpriteAtlas.cpp  OGSpriteAtlas.hpp  OGUi.cpp  OGUi.hpp
app/src/main/cpp/render/meshes/: GPUMesh.hpp  GPUStaticMesh.cpp  GPUStaticMesh.hpp
app/src/main/cpp/render/text/: FreeTypeFont.cpp  FreeTypeFont.hpp
app/src/main/cpp/render/vulkan/: DescriptorCache.cpp  DescriptorCache.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderFramework.hpp  RenderHelper.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp
app/src/main/cpp/render/vulkan/pipelines/: Deferred.cpp  Deferred.hpp  IRenderPipeline.hpp  PostProcess.cpp  PostProcess.hpp  ScreenSpace.cpp  ScreenSpace.hpp  ShadowCapture.cpp  ShadowCapture.hpp  UIRender.cpp  UIRender.hpp
app/src/main/cpp/render/vulkan/uniform/: UniformBuffer.hpp
app/src/main/cpp/resources/: GPUTextureResource.cpp  GPUTextureResource.hpp  ResourceManager.cpp  ResourceManager.hpp
app/src/main/cpp/system/: OGSingleton.hpp  OGTimer.cpp  OGTimer.hpp  OGTreeNode.hpp  OGXml.cpp  OGXml.hpp
app/src/main/java/uk/oxyous/oxyous_2026/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/uk/oxyous/oxyous_2026/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: __init__.py  blender_manifest.toml
shaders/: bindless-deferred.frag  bindless-deferred.vert  color-vertex.frag  color-vertex.vert  compile_shaders.bat  deferred.frag  deferred.vert  postprocess.frag  postprocess.vert  screen-space.frag  screen-space.vert  shadow.frag  shadow.vert  ui.frag  ui.vert
